Учет пользователей в локальной БД. Упрощение авторизации, отказ от сложной Identity "из коробки". Удаление кучи лишних пакетов, зависимостей, конфигов для авторизации.

--- a/TranslationRegistryModel/Model.csproj
+++ b/TranslationRegistryModel/Model.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IRepository.cs" />
+    <Compile Include="Models\ProjectStatuse.cs" />
     <Compile Include="Models\Project.cs" />
     <Compile Include="Models\Document.cs" />
     <Compile Include="Models\User.cs" />
