--- a/TranslationRegistryModel/Model.csproj
+++ b/TranslationRegistryModel/Model.csproj
@@ -30,9 +30,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,13 +49,80 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Document.cs">
+      <DependentUpon>TRegModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="File.cs">
+      <DependentUpon>TRegModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="IRepository.cs" />
-    <Compile Include="Models\ProjectStatuse.cs" />
-    <Compile Include="Models\Project.cs" />
-    <Compile Include="Models\Document.cs" />
-    <Compile Include="Models\User.cs" />
-    <Compile Include="Models\Language.cs" />
+    <Compile Include="Language.cs">
+      <DependentUpon>TRegModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="LanguagePair.cs">
+      <DependentUpon>TRegModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Project.cs">
+      <DependentUpon>TRegModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ProjectStatus.cs">
+      <DependentUpon>TRegModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Stage.cs">
+      <DependentUpon>TRegModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TRegModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TRegModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TRegModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TRegModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TRegModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TRegModel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="User.cs">
+      <DependentUpon>TRegModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="User_Stage.cs">
+      <DependentUpon>TRegModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="WorkType.cs">
+      <DependentUpon>TRegModel.tt</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+    <EntityDeploy Include="TRegModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>TRegModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="TRegModel.edmx.diagram">
+      <DependentUpon>TRegModel.edmx</DependentUpon>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="TRegModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>TRegModel.edmx</DependentUpon>
+      <LastGenOutput>TRegModel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="TRegModel.edmx.sql" />
+    <Content Include="TRegModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>TRegModel.edmx</DependentUpon>
+      <LastGenOutput>TRegModel.cs</LastGenOutput>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
