--- a/TranslationReg/TranslationReg.csproj
+++ b/TranslationReg/TranslationReg.csproj
@@ -250,6 +250,8 @@
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery-ui-1.12.1.js" />
     <Content Include="Scripts\jquery-ui-1.12.1.min.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -291,7 +293,9 @@
     <Content Include="Views\Projects\Index.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\DocStage\Index.cshtml" />
-    <Content Include="Views\LanguagePairs\View.cshtml" />
+    <Content Include="Views\LanguagePairs\Create.cshtml" />
+    <Content Include="Views\LanguagePairs\Edit.cshtml" />
+    <Content Include="Views\LanguagePairs\List.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
