--- a/TranslationRegistryModel/App.config
+++ b/TranslationRegistryModel/App.config
@@ -15,6 +15,5 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Entities" connectionString="metadata=res://*/TRegModel.csdl|res://*/TRegModel.ssdl|res://*/TRegModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=SqlRepository.SqlContext;integrated security=True;connect timeout=30;encrypt=False;trustservercertificate=True;applicationintent=ReadWrite;multisubnetfailover=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <add name="Entities" connectionString="metadata=res://*/TRegModel.csdl|res://*/TRegModel.ssdl|res://*/TRegModel.msl;provider=System.Data.SqlClient;provider connection string='data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=&quot;C:\Users\Arty\AppData\Local\Microsoft\Microsoft SQL Server Local DB\Instances\MSSQLLocalDB\TransReg.mdf&quot;;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
