--- a/TranslationReg/TranslationReg.csproj
+++ b/TranslationReg/TranslationReg.csproj
@@ -193,7 +193,6 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\images\SiteBg.jpg" />
     <Content Include="Content\MyAppStyles.css" />
     <Content Include="Content\themes\base\accordion.css" />
     <Content Include="Content\themes\base\all.css" />
@@ -311,6 +310,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\images\" />
     <Folder Include="Uploads\" />
   </ItemGroup>
   <ItemGroup>
