--- a/TranslationRegistryModel/App.config
+++ b/TranslationRegistryModel/App.config
@@ -14,4 +14,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="Entities" connectionString="metadata=res://*/TRegModel.csdl|res://*/TRegModel.ssdl|res://*/TRegModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=SqlRepository.SqlContext;integrated security=True;multipleactiveresultsets=True;connect timeout=30;encrypt=False;trustservercertificate=True;application name=EntityFramework;applicationintent=ReadWrite;multisubnetfailover=False&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
