--- a/TranslationRegistryRepository/SqlRepository.csproj
+++ b/TranslationRegistryRepository/SqlRepository.csproj
@@ -96,6 +96,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="RepositoryCRUD\SqlRepository_DocFile.cs" />
+    <Compile Include="RepositoryCRUD\SqlRepository_User_Stage.cs" />
     <Compile Include="RepositoryCRUD\SqlRepository_DocStage.cs" />
     <Compile Include="RepositoryCRUD\SqlRepository_ProjectStatuse.cs" />
     <Compile Include="RepositoryCRUD\SqlRepository_WorkType.cs" />
