--- a/TranslationReg/TranslationReg.csproj
+++ b/TranslationReg/TranslationReg.csproj
@@ -180,6 +180,7 @@
     <Compile Include="Controllers\LanguagePairsController.cs" />
     <Compile Include="Controllers\LanguagesController.cs" />
     <Compile Include="Controllers\ProjectsController.cs" />
+    <Compile Include="Controllers\_RepositoryController.cs" />
     <Compile Include="Controllers\UnitOfMeasureController.cs" />
     <Compile Include="Controllers\User_StageController.cs" />
     <Compile Include="Controllers\WorkTypesController.cs" />
