--- a/TranslationReg/TranslationReg.csproj
+++ b/TranslationReg/TranslationReg.csproj
@@ -194,59 +194,15 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\bootstrap.css" />
-    <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\MyAppStyles.css" />
-    <Content Include="Content\themes\base\accordion.css" />
-    <Content Include="Content\themes\base\all.css" />
-    <Content Include="Content\themes\base\autocomplete.css" />
-    <Content Include="Content\themes\base\base.css" />
-    <Content Include="Content\themes\base\button.css" />
-    <Content Include="Content\themes\base\core.css" />
-    <Content Include="Content\themes\base\datepicker.css" />
-    <Content Include="Content\themes\base\dialog.css" />
-    <Content Include="Content\themes\base\draggable.css" />
-    <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
-    <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
-    <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
-    <Content Include="Content\themes\base\images\ui-bg_glass_65_ffffff_1x400.png" />
-    <Content Include="Content\themes\base\images\ui-bg_glass_75_dadada_1x400.png" />
-    <Content Include="Content\themes\base\images\ui-bg_glass_75_e6e6e6_1x400.png" />
-    <Content Include="Content\themes\base\images\ui-bg_glass_95_fef1ec_1x400.png" />
-    <Content Include="Content\themes\base\images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
-    <Content Include="Content\themes\base\images\ui-icons_222222_256x240.png" />
-    <Content Include="Content\themes\base\images\ui-icons_2e83ff_256x240.png" />
-    <Content Include="Content\themes\base\images\ui-icons_444444_256x240.png" />
-    <Content Include="Content\themes\base\images\ui-icons_454545_256x240.png" />
-    <Content Include="Content\themes\base\images\ui-icons_555555_256x240.png" />
-    <Content Include="Content\themes\base\images\ui-icons_777620_256x240.png" />
-    <Content Include="Content\themes\base\images\ui-icons_777777_256x240.png" />
-    <Content Include="Content\themes\base\images\ui-icons_888888_256x240.png" />
-    <Content Include="Content\themes\base\images\ui-icons_cc0000_256x240.png" />
-    <Content Include="Content\themes\base\images\ui-icons_cd0a0a_256x240.png" />
-    <Content Include="Content\themes\base\images\ui-icons_ffffff_256x240.png" />
-    <Content Include="Content\themes\base\jquery-ui.css" />
-    <Content Include="Content\themes\base\jquery-ui.min.css" />
-    <Content Include="Content\themes\base\menu.css" />
-    <Content Include="Content\themes\base\progressbar.css" />
-    <Content Include="Content\themes\base\resizable.css" />
-    <Content Include="Content\themes\base\selectable.css" />
-    <Content Include="Content\themes\base\selectmenu.css" />
-    <Content Include="Content\themes\base\slider.css" />
-    <Content Include="Content\themes\base\sortable.css" />
-    <Content Include="Content\themes\base\spinner.css" />
-    <Content Include="Content\themes\base\tabs.css" />
-    <Content Include="Content\themes\base\theme.css" />
-    <Content Include="Content\themes\base\tooltip.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="package-lock.json" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Scripts\jquery-1.12.4.intellisense.js" />
     <Content Include="Scripts\jquery-1.12.4.js" />
@@ -264,6 +220,53 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Style\bootstrap-theme.css" />
+    <Content Include="Style\bootstrap-theme.min.css" />
+    <Content Include="Style\bootstrap.css" />
+    <Content Include="Style\bootstrap.min.css" />
+    <Content Include="Style\Site.css" />
+    <Content Include="Style\style.css" />
+    <Content Include="Style\themes\base\accordion.css" />
+    <Content Include="Style\themes\base\all.css" />
+    <Content Include="Style\themes\base\autocomplete.css" />
+    <Content Include="Style\themes\base\base.css" />
+    <Content Include="Style\themes\base\button.css" />
+    <Content Include="Style\themes\base\core.css" />
+    <Content Include="Style\themes\base\datepicker.css" />
+    <Content Include="Style\themes\base\dialog.css" />
+    <Content Include="Style\themes\base\draggable.css" />
+    <Content Include="Style\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
+    <Content Include="Style\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
+    <Content Include="Style\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
+    <Content Include="Style\themes\base\images\ui-bg_glass_65_ffffff_1x400.png" />
+    <Content Include="Style\themes\base\images\ui-bg_glass_75_dadada_1x400.png" />
+    <Content Include="Style\themes\base\images\ui-bg_glass_75_e6e6e6_1x400.png" />
+    <Content Include="Style\themes\base\images\ui-bg_glass_95_fef1ec_1x400.png" />
+    <Content Include="Style\themes\base\images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
+    <Content Include="Style\themes\base\images\ui-icons_222222_256x240.png" />
+    <Content Include="Style\themes\base\images\ui-icons_2e83ff_256x240.png" />
+    <Content Include="Style\themes\base\images\ui-icons_444444_256x240.png" />
+    <Content Include="Style\themes\base\images\ui-icons_454545_256x240.png" />
+    <Content Include="Style\themes\base\images\ui-icons_555555_256x240.png" />
+    <Content Include="Style\themes\base\images\ui-icons_777620_256x240.png" />
+    <Content Include="Style\themes\base\images\ui-icons_777777_256x240.png" />
+    <Content Include="Style\themes\base\images\ui-icons_888888_256x240.png" />
+    <Content Include="Style\themes\base\images\ui-icons_cc0000_256x240.png" />
+    <Content Include="Style\themes\base\images\ui-icons_cd0a0a_256x240.png" />
+    <Content Include="Style\themes\base\images\ui-icons_ffffff_256x240.png" />
+    <Content Include="Style\themes\base\jquery-ui.css" />
+    <Content Include="Style\themes\base\jquery-ui.min.css" />
+    <Content Include="Style\themes\base\menu.css" />
+    <Content Include="Style\themes\base\progressbar.css" />
+    <Content Include="Style\themes\base\resizable.css" />
+    <Content Include="Style\themes\base\selectable.css" />
+    <Content Include="Style\themes\base\selectmenu.css" />
+    <Content Include="Style\themes\base\slider.css" />
+    <Content Include="Style\themes\base\sortable.css" />
+    <Content Include="Style\themes\base\spinner.css" />
+    <Content Include="Style\themes\base\tabs.css" />
+    <Content Include="Style\themes\base\theme.css" />
+    <Content Include="Style\themes\base\tooltip.css" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -331,10 +334,15 @@
     <Content Include="Views\WorkTypes\Details.cshtml" />
     <Content Include="Views\WorkTypes\Edit.cshtml" />
     <Content Include="Views\WorkTypes\Index.cshtml" />
+    <Content Include="Style\bootstrap-theme.css.map" />
+    <Content Include="Style\bootstrap-theme.min.css.map" />
+    <Content Include="Style\bootstrap.css.map" />
+    <Content Include="Style\bootstrap.min.css.map" />
+    <Content Include="Style\style.less" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Content\images\" />
+    <Folder Include="Style\images\" />
     <Folder Include="Uploads\" />
   </ItemGroup>
   <ItemGroup>
