гит игнор конфигов

--- a/.gitignore
+++ b/.gitignore
@@ -265,3 +265,5 @@ __pycache__/
 /TranslationRegistryRepository/Migrations
 /TranslationReg/Style
 /TranslationReg/package-lock.json
+TranslationRegistryModel/App.config
+TranslationReg/Web.config
