гитигнор для файлов edmx модели

--- a/.gitignore
+++ b/.gitignore
@@ -267,3 +267,5 @@ __pycache__/
 /TranslationReg/package-lock.json
 TranslationRegistryModel/App.config
 TranslationReg/Web.config
+TranslationRegistryModel/TRegModel.edmx.sql
+TranslationRegistryModel/TRegModel.Designer.cs
