--- a/TranslationRegistryModel/Model.csproj
+++ b/TranslationRegistryModel/Model.csproj
@@ -121,6 +121,7 @@
       <DependentUpon>TRegModel.edmx</DependentUpon>
       <LastGenOutput>TRegModel.Context.cs</LastGenOutput>
     </Content>
+    <Content Include="TRegModel.edmx.sql" />
     <Content Include="TRegModel.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>TRegModel.edmx</DependentUpon>
