--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 # Связанные с БД файлы
 /TranslationReg/Web.config
 /TranslationRegistryModel/App.config
-
+TranslationRegistryModel/App.config
 # User-specific files
 *.suo
 *.user
