--- a/TranslationReg/TranslationReg.csproj
+++ b/TranslationReg/TranslationReg.csproj
@@ -226,6 +226,7 @@
     <Content Include="Style\bootstrap-theme.min.css" />
     <Content Include="Style\bootstrap.css" />
     <Content Include="Style\bootstrap.min.css" />
+    <Content Include="Style\images\logo_tpu.png" />
     <Content Include="Style\Site.css" />
     <Content Include="Style\style.css" />
     <Content Include="Style\themes\base\accordion.css" />
@@ -340,7 +341,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Style\images\" />
     <Folder Include="Uploads\" />
   </ItemGroup>
   <ItemGroup>
