--- a/TranslationReg/packages.config
+++ b/TranslationReg/packages.config
@@ -36,6 +36,9 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
+  <package id="Syncfusion.Compression.Base46" version="15.4.0.20" targetFramework="net461" />
+  <package id="Syncfusion.DocIO.Base46" version="15.4.0.20" targetFramework="net461" />
+  <package id="Syncfusion.OfficeChart.Base46" version="15.4.0.20" targetFramework="net461" />
   <package id="Unity" version="5.2.0" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
