--- a/TranslationReg/TranslationReg.csproj
+++ b/TranslationReg/TranslationReg.csproj
@@ -182,6 +182,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AnalyticsController.cs" />
     <Compile Include="Controllers\DocStagesController.cs" />
     <Compile Include="Controllers\DocumentsController.cs" />
     <Compile Include="Controllers\Helper.cs" />
@@ -197,6 +198,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\AnaliticFiltersModel.cs" />
     <Compile Include="Models\AccountModel.cs" />
     <Compile Include="Models\LanguagePairsModel.cs" />
     <Compile Include="Models\User_StageModel.cs" />
@@ -356,6 +358,7 @@
     <Content Include="Views\ProjectStatuse\Delete.cshtml" />
     <Content Include="Views\ProjectStatuse\Edit.cshtml" />
     <Content Include="Views\ProjectStatuse\List.cshtml" />
+    <Content Include="Views\Analytics\Filters.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
