--- a/TranslationReg/TranslationReg.csproj
+++ b/TranslationReg/TranslationReg.csproj
@@ -198,7 +198,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\AnaliticFiltersModel.cs" />
+    <Compile Include="Models\ReportModel.cs" />
     <Compile Include="Models\AccountModel.cs" />
     <Compile Include="Models\LanguagePairsModel.cs" />
     <Compile Include="Models\User_StageModel.cs" />
@@ -359,6 +359,7 @@
     <Content Include="Views\ProjectStatuse\Edit.cshtml" />
     <Content Include="Views\ProjectStatuse\List.cshtml" />
     <Content Include="Views\Analytics\Filters.cshtml" />
+    <Content Include="Views\Analytics\Report.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
