--- a/TranslationReg/packages.config
+++ b/TranslationReg/packages.config
@@ -5,6 +5,9 @@
   <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net461" />
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="FormsAuthenticationExtensions" version="1.3.0.15" targetFramework="net461" />
+  <package id="ImageResizer" version="4.2.0" targetFramework="net461" />
+  <package id="ImageResizer.Plugins.SimpleFilters" version="4.2.0" targetFramework="net461" />
   <package id="jQuery" version="1.12.4" targetFramework="net461" />
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net461" />
