Tiles and cards design templates. avatar bugfix

--- a/TranslationReg/TranslationReg.csproj
+++ b/TranslationReg/TranslationReg.csproj
@@ -370,6 +370,8 @@
     <Content Include="Views\ProjectStatuse\List.cshtml" />
     <Content Include="Views\Analytics\Filters.cshtml" />
     <Content Include="Views\Analytics\Report.cshtml" />
+    <Content Include="Views\Projects\Card.cshtml" />
+    <Content Include="Views\Languages\Tiles.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
